# acl23-trigger-warning-assignment

./: .dockerignore  Dockerfile  Dockerfile.cuda  LICENSE  README.md  pyproject.toml
acl23_trigger_warning_assignment/: main.py  util.py
acl23_trigger_warning_assignment/classification/: evaluate.py  feature_engineering_experiments.py  longformer_experiments.py
acl23_trigger_warning_assignment/hydration/: hydrate.py
acl23_trigger_warning_assignment/hydration/parser/: __init__.py  ao3_collection.py  ao3_comment.py  ao3_module.py  ao3_page.py  ao3_summary.py  ao3_tag.py  ao3_work.py
acl23_trigger_warning_assignment/resources/institutional-warnings/: institutional-sources-merged.csv  sources.csv
acl23_trigger_warning_assignment/resources/label-set/: map-fine-to-coarse.json  tw-coarse.json  tw-fine-closed.json  tw-fine-open.json
acl23_trigger_warning_assignment/resources/splits/: test.txt  train-10k-coarse.txt  train-10k-fine.txt  train-28k-coarse.txt  train-28k-fine.txt  train-69k-coarse.txt  train-69k-fine.txt  validation.txt
experiments/: longformer_experiments.py  requirements.txt  svm_experiments.py  util.py  xgboost_experiments.py
hydrate/: hydrate.py  requirements.txt
hydrate/parser/: ao3_author.py  ao3_chapter.py  ao3_notes.py  ao3_page.py  ao3_series.py  ao3_work.py
